# fpl-autopilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  architecture.md  config.yaml  docker-compose.yml.example  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml
data/: name_resolution.yaml
docs/: api-contract.md  architecture.md  deadguard.md  decision-engine.md  onboarding.md  plan.md  product-spec.md  risks.md  runbook.md
docs/superpowers/: HANDOFF.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
src/: cli.py  config.py  scheduler.py
src/ai/: audit_narrator.py  cache.py  grounding.py  jobs.py  provider.py  reasoning.py
tests/: conftest.py  test_ai_audit_narrator.py  test_ai_cache.py  test_ai_grounding.py  test_ai_jobs.py  test_ai_prompts.py  test_ai_prompts_audit.py  test_ai_prompts_chip.py  test_ai_prompts_deadguard.py  test_ai_prompts_transfer.py  test_ai_provider.py  test_ai_reasoning.py  test_ai_reasoning_chip.py  test_ai_reasoning_deadguard.py  test_ai_reasoning_transfer.py  test_api.py  test_api_audit.py  test_audit.py  test_bench.py  test_cache.py  test_captain.py  test_chips.py  test_claude_provider.py  test_cli.py  test_cli_execute_lineup.py  test_cli_execute_transfer.py  test_cli_freeze.py  test_cli_init_fpl.py  test_cli_refresh.py  test_cli_review.py  test_cli_route.py  test_cli_undo.py  test_clusters.py  test_confidence.py  test_config.py  test_crypto.py  test_db.py  test_deadguard.py  test_executor.py  test_fdr.py  (+25 more)
(+167 files in other folders)
