[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-autopilot"
version = "0.1.0"
description = "Personal Fantasy Premier League assistant"
requires-python = ">=3.11"
dependencies = ["requests", "pydantic>=2", "pyyaml", "fastapi", "uvicorn"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
fpl-autopilot = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.data", "src.analytics", "src.decisions", "src.interface"]
